--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 <body class="light-theme">
     <header>
-        <audio id="music">
-            <source src="assets/musics/normal-world.mpeg" aria-details="Audio do site" />
-        </audio>
         <div class="header-content">
             <img src="./assets/images/banner/logo.svg" alt="Imagem principal Mundo Invertido. Semana Frontend DIO." class="invert-element">
             <p class="invert-element" role="text">
@@ -112,12 +109,12 @@
                         <input type="email" name="email" id="txtEmail">
 
                         <label for="level">Level</label>
-                        <input type="text" name="level" id="txtLevel">
+                        <input type="number" name="level" id="txtLevel">
 
                         <label for="character">Personagem</label>
                         <textarea name="character" id="txtCharacter" cols="30" rows="10"></textarea>
 
-                        <button type="button">Me inscrever</button>
+                        <button type="button" id="btnSubcribe">Me inscrever</button>
                     </form>
                 </div>
             </div>
@@ -133,5 +130,27 @@
     </footer>
 
     <script type="module" src="./assets/js/main.js"></script>
+    <audio id="music" src="assets/musics/normal-world.mpeg" autoplay></audio>
+
+    <script>
+      window.addEventListener('click', function() {
+        const audio = document.getElementById('music');
+        audio.play();
+        audio.volume = 0.2;
+      })
+
+      function switchTheme() {
+        document.body.classList.toggle('dark-theme');
+        document.body.classList.toggle('light-theme');
+
+        const theme = document.body.classList[0];
+        const music = theme === 'light-theme' ? 'normal-world.mpeg' : 'inverted-world.mpeg'
+
+        const audio = document.getElementById('music');
+        audio.src = `assets/musics/${music}`;
+        audio.play();
+        audio.volume = 0.2;
+      }
+    </script>
 </body>
 </html>
